add_executable(chain chain_of_responsibility/src/main.cc)

add_executable(command command/src/main.cc)

add_executable(interpreter interpreter/src/main.cc)

add_executable(iterator iterator/src/main.cc)

add_executable(mediator mediator/src/main.cc)

add_executable(memento memento/src/main.cc)

add_executable(observer observer/src/main.cc)

add_executable(state state/src/main.cc)

add_executable(strategy strategy/src/main.cc)

add_executable(template template_method/src/main.cc)

add_executable(visitor visitor/src/main.cc)

