add_executable(adapter adapter/src/main.cc)

add_executable(bridge bridge/src/main.cc)

add_executable(composite composite/src/main.cc)

add_executable(decorator decorator/src/main.cc)

add_executable(facade facade/src/main.cc)

add_executable(flyweight flyweight/src/main.cc)

add_executable(proxy proxy/src/main.cc)